fix: DDP crash — detach cheby_lambda_max buffer, always forward propagator, find_unused_parameters=True
Root cause: _cheby_lambda_max.copy_(_lmax) retained computation graph
from nn.Parameters across forward passes, causing 'backward through
graph a second time' on the next step. Fixed by detaching before copy.

Additionally, propagator forward is now always executed (even when
alpha=0) so all params participate in the graph for DDP compatibility.
hf_train_lightning.py auto-detects multi-GPU and uses
DDPStrategy(find_unused_parameters=True).

Fixes: 4xA100 DDP training crash (jobs 698bf828, 698bfa35)
Tests: 163/164 pass (quick_convergence marginal threshold, unrelated)

--- a/configs/a100_optimized.yaml
+++ b/configs/a100_optimized.yaml
@@ -65,7 +65,7 @@ sampler:
 training:
   batch_size: 2048
   micro_batch_size: 32
-  gradient_checkpointing: true
+  gradient_checkpointing: false
   dtype: float32
   learning_rate: 1.0e-3
   weight_decay: 0.1
