--- a/configs/a100_optimized.yaml
+++ b/configs/a100_optimized.yaml
@@ -26,6 +26,7 @@ spinor:
   state_dim: 64
   mimo_groups: 8
   d_conv: 4
+  use_mamba2: true
 
 propagator:
   cayley_dt: 0.02
@@ -64,7 +65,7 @@ sampler:
 
 training:
   batch_size: 2048
-  micro_batch_size: 32
+  micro_batch_size: 128
   gradient_checkpointing: false
   dtype: float32
   learning_rate: 3.0e-4
@@ -80,7 +81,7 @@ training:
   label_smoothing: 0.01
   dataset_name: "HuggingFaceFW/fineweb-edu"
   tokenizer_path: "tokenizer/"
-  num_workers: 4
+  num_workers: 8
   prefetch_factor: 8
   shuffle_buffer_size: 50000
   scheduler_type: "wsd"
